--- a/web/index.html
+++ b/web/index.html
@@ -23,17 +23,7 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-3" style="background: #efefef; float: left; margin-right: 30px;">
-       <h3>Network Stream</h3>
-       <div style="height: 300px; overflow: auto; margin: 0px 0px 0px 0px;">
-		<table class="table table-bordered" id="network-stream">
-			<!--<tr><td class="time-td">11:12</td><td>Game begins</td></tr>
-			<tr><td>hi</td></tr> -->
-		</table>
-		</div>
-       </div>
       <div id="table-container" class="game-container" style="display: block">
 			<h3 id="game-title"></h3>
 			<table class="board">
@@ -88,24 +78,83 @@
 			</table>
 			<h4></h4>
 			<p><button id="next" class="btn btn-primary btn-lg">Next</button></p>
-	   </div>
        </div>
 		
-		<div style="padding-top:50px">
+      <div id="table-container2" class="game-container mind-map" style="display: block">
+			<h3 id="game-title"></h3>
+			<table class="board">
+				<tr>
+					<td id="t1-1" class="board-block"></td>
+					<td id="t1-2" class="board-block"></td>
+					<td id="t1-3" class="board-block" ></td>				
+					<td id="t1-4" class="board-block" ></td>
+					<td id="t1-5" class="board-block" ></td>
+					<td id="t1-6" class="board-block" ></td>				
+				</tr>
+				<tr>
+					<td id="t2-1" class="board-block" ></td>
+					<td id="t2-2" class="board-block" ></td>
+					<td id="t2-3" class="board-block" ></td>				
+					<td id="t2-4" class="board-block" ></td>
+					<td id="t2-5" class="board-block" ></td>
+					<td id="t2-6" class="board-block" ></td>				
+				</tr>
+				<tr>
+					<td id="t3-1" class="board-block" ></td>
+					<td id="t3-2" class="board-block" ></td>
+					<td id="t3-3" class="board-block" ></td>				
+					<td id="t3-4" class="board-block" ></td>
+					<td id="t3-5" class="board-block" ></td>
+					<td id="t3-6" class="board-block" ></td>				
+				</tr>
+				<tr>
+					<td id="t4-1" class="board-block" ></td>
+					<td id="t4-2" class="board-block" ></td>
+					<td id="t4-3" class="board-block" ></td>				
+					<td id="t4-4" class="board-block" ></td>
+					<td id="t4-5" class="board-block" ></td>
+					<td id="t4-6" class="board-block" ></td>				
+				</tr>
+				<tr>
+					<td id="t5-1" class="board-block" ></td>
+					<td id="t5-2" class="board-block" ></td>
+					<td id="t5-3" class="board-block" ></td>				
+					<td id="t5-4" class="board-block" ></td>
+					<td id="t5-5" class="board-block" ></td>
+					<td id="t5-6" class="board-block" ></td>				
+				</tr>
+				<tr>
+					<td id="t6-1" class="board-block" ></td>
+					<td id="t6-2" class="board-block" ></td>
+					<td id="t6-3" class="board-block" ></td>				
+					<td id="t6-4" class="board-block" ></td>
+					<td id="t6-5" class="board-block" ></td>
+					<td id="t6-6" class="board-block" ></td>				
+				</tr>
+			</table>
+	   </div>
+		<div style="padding-top:50px; margin-top: 20px;">
+			<div class="col-md-3" style="background: #efefef; float: right; margin-right: 30px;">
+			<h3>Network Stream</h3>
+			<div style="height: 300px; overflow: auto; margin: 0px 0px 0px 0px;">
+				<table class="table table-bordered" id="network-stream">
+				<!--<tr><td class="time-td">11:12</td><td>Game begins</td></tr>
+				<tr><td>hi</td></tr> -->
+				</table>
+			</div>
 		</div>
 
-      <hr>
-      <hr>
+		</div>
 
+		<div style="clear: both; margin-top: 30px"></div>
+
+      <hr>
       <footer>
         <p class="text-center">Find-Your-Way 2014, all rights lefts out</p>
       </footer>
     </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/model.js"></script>
